--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "isbot": "^3.8.0",
     "lucide-react": "^0.473.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shopify-cli": "^1.0.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
