--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@shopify/remix-oxygen": "^2.0.9",
     "@shopify/shopify-api": "^11.12.0",
     "dotenv": "^16.5.0",
+    "flowbite": "^3.1.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.8.0",
